[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Menus/Arcade/Arcade_S05_Player_Select_Cam.gd" type="Script" id=1]
[ext_resource path="res://map/Campaign-mode/Map-C-01-Level-01.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/Arcade/Arcade_Bottom_HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Menu/Menu-4x4-Player.png" type="Texture" id=4]
[ext_resource path="res://Menus/Grids/menu_4x4_01.tscn" type="PackedScene" id=5]

[node name="Pawn_Select_Screen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 28.0
script = ExtResource( 1 )
map_to_load_cam = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1948.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1948.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 150.0
margin_right = 1948.0
margin_bottom = 880.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 972.0
margin_bottom = 730.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 976.0
margin_right = 1948.0
margin_bottom = 730.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 884.0
margin_right = 1948.0
margin_bottom = 993.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="Arcade_Bottom_HUD" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 997.0
margin_right = 1948.0
margin_bottom = 1079.0

[node name="Sprite" type="Sprite" parent="VBoxContainer"]
position = Vector2( 965, 502 )
texture = ExtResource( 4 )

[node name="Menu_4x4_01" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 965, 502 )

[node name="Menu_4x4_02" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 965, 502 )
player = 2

[node name="Menu_4x4_03" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 965, 502 )
player = 3

[node name="Menu_4x4_04" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 965, 502 )
player = 4

[node name="Menu_4x4_05" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 965, 502 )
player = 5

[node name="Menu_4x4_06" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 965, 502 )
player = 6

[node name="Menu_4x4_07" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 965, 502 )
player = 7

[node name="Menu_4x4_08" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 965, 502 )
player = 8

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
